<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/recycler_view_blue"
    tools:context=".views.CoinGeneralInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/coin_general_info_image_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/list_item_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/name_label"
                android:textStyle="bold"
                style="@style/general_info_text_view"/>

            <TextView
                android:id="@+id/coin_general_info_coin_name"
                style="@style/general_info_text_view" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/description_label"
                android:textStyle="bold"
                style="@style/general_info_text_view"/>

            <TextView
                android:id="@+id/coin_general_info_description"
                style="@style/general_info_text_view"
                android:layout_width="match_parent" />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/website_label"
                android:textStyle="bold"
                style="@style/general_info_text_view"/>

            <TextView
                android:id="@+id/coin_general_info_coin_website"
                style="@style/general_info_text_view" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/total_mined_label"
                android:textStyle="bold"
                style="@style/general_info_text_view"/>

            <TextView
                android:id="@+id/coin_general_info_total_mined"
                style="@style/general_info_text_view" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/block_reward_label"
                android:textStyle="bold"
                style="@style/general_info_text_view"/>

            <TextView
                android:id="@+id/coin_general_info_block_reward"
                style="@style/general_info_text_view" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/block_time_label"
                android:textStyle="bold"
                style="@style/general_info_text_view"/>

            <TextView
                android:id="@+id/coin_general_info_block_time"
                style="@style/general_info_text_view" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/compared_to_label_btc"
                android:textStyle="bold"
                style="@style/general_info_text_view"/>

            <TextView
                android:id="@+id/coin_compared_to_btc"
                style="@style/general_info_text_view" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/compared_to_label_eth"
                android:textStyle="bold"
                style="@style/general_info_text_view"/>

            <TextView
                android:id="@+id/coin_compared_to_eth"
                style="@style/general_info_text_view" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/compared_to_label_evn"
                android:textStyle="bold"
                style="@style/general_info_text_view"/>

            <TextView
                android:id="@+id/coin_compared_to_evn"
                style="@style/general_info_text_view" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/compared_to_label_doge"
                android:textStyle="bold"
                style="@style/general_info_text_view"/>

            <TextView
                android:id="@+id/coin_compared_to_doge"
                style="@style/general_info_text_view" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/compared_to_label_zec"
                android:textStyle="bold"
                style="@style/general_info_text_view"/>

            <TextView
                android:id="@+id/coin_compared_to_zec"
                style="@style/general_info_text_view" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/compared_to_label_usd"
                android:textStyle="bold"
                style="@style/general_info_text_view"/>

            <TextView
                android:id="@+id/coin_compared_to_usd"
                style="@style/general_info_text_view" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/compared_to_label_eur"
                android:textStyle="bold"
                style="@style/general_info_text_view"/>

            <TextView
                android:id="@+id/coin_compared_to_eur"
                style="@style/general_info_text_view" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>